--- a/index.html
+++ b/index.html
@@ -11,38 +11,40 @@
     <div class="fundo">
         <h1>Calculadora simples com Java Script</h1>
         <div class="calculadora">
+            <h1>Calculadora</h1>
             <p id="resultado"></p>
             <table>
                 <tr>
-                    <td><button>C</button></td>
-                    <td><button><</button></td>
-                    <td><button>/</button></td>
-                    <td><button>X</button></td>
+                    <td><button class="botao" onclick="limpar()">C</button></td>
+                    <td><button class="botao" onclick="voltar()"><</button></td>
+                    <td><button class="botao" onclick="insere('/')">/</button></td>
+                    <td><button class="botao" onclick="insere('*')">X</button></td>
                 </tr>
                 <tr>
-                    <td><button>7</button></td>
-                    <td><button>8</button></td>
-                    <td><button>9</button></td>
-                    <td><button>-</button></td>
+                    <td><button class="botao" onclick="insere('7')">7</button></td>
+                    <td><button class="botao" onclick="insere('8')">8</button></td>
+                    <td><button class="botao" onclick="insere('9')">9</button></td>
+                    <td><button class="botao" onclick="insere('-')">-</button></td>
                 </tr>
                 <tr>
-                    <td><button>4</button></td>
-                    <td><button>5</button></td>
-                    <td><button>6</button></td>
-                    <td><button>+</button></td>
+                    <td><button class="botao" onclick="insere('4')">4</button></td>
+                    <td><button class="botao" onclick="insere('5')">5</button></td>
+                    <td><button class="botao" onclick="insere('6')">6</button></td>
+                    <td><button class="botao" onclick="insere('+')">+</button></td>
                 </tr>
                 <tr>
-                    <td><button>1</button></td>
-                    <td><button>2</button></td>
-                    <td><button>3</button></td>
-                    <td rowspan="2"><button>=</button></td>
+                    <td><button class="botao" onclick="insere('1')">1</button></td>
+                    <td><button class="botao" onclick="insere('2')">2</button></td>
+                    <td><button class="botao" onclick="insere('3')">3</button></td>
+                    <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">=</button></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><button>0</button></td>
-                    <td><button>.</button></td>
+                    <td colspan="2"><button class="botao"  style="width: 106px;">0</button></td>
+                    <td><button class="botao">.</button></td>
                 </tr>
             </table>
         </div>
     </div>
+    <script src="js/calc.js"></script>
 </body>
 </html>
