--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="fundo">
-        <h1>Calculadora simples com Java Script</h1>
+        <h1 class="centro">Calculadora simples com Java Script</h1>
         <div class="calculadora">
-            <h1>Calculadora</h1>
+            <h1 class="centrotitulo">Calculadora</h1>
             <p id="resultado"></p>
             <table>
                 <tr>
