--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">=</button></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><button class="botao"  style="width: 106px;">0</button></td>
-                    <td><button class="botao">.</button></td>
+                    <td colspan="2"><button class="botao" style="width: 106px;" onclick="insere('0')"">0</button></td>
+                    <td><button class="botao" onclick="insere('.')">.</button></td>
                 </tr>
             </table>
         </div>
